--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -2,6 +2,7 @@
     height: calc(100vh - 80px);
     width: 100vw;
     position: relative;
+   
 
     .container{
         width: 300vw;
@@ -11,7 +12,9 @@
         
 
         img{
-            width: 100vw;
+            padding: 0;
+            margin: 0;
+            width: 100%;
             height: 100%;
             object-fit: cover;
         }
