--- a/src/pages/Products/products.scss
+++ b/src/pages/Products/products.scss
@@ -20,6 +20,7 @@
                 margin-bottom: 10px;
                 label{
                     margin-left: 10px;
+                    text-transform: capitalize;
                 }
             }
         }
