--- a/src/pages/Product/product.scss
+++ b/src/pages/Product/product.scss
@@ -24,7 +24,7 @@
             img{
                 width: 100%;
                 max-height: 800px;
-                object-fit: cover;
+                object-fit: contain;
             }
         }
     }
